--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Homepage</title>
 </head>
 <body>
+    <button>test</button>
 
+    <script>
+        const btn = document.querySelector('button')
+
+        btn.addEventListener('click', () => {
+            this.style.backgroundColor = 'pink';
+        })
+    </script>
 </body>
 </html>
