--- a/level-selector/index.html
+++ b/level-selector/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>Document</title>
 </head>
 <body>
+    <div class="level-selector">
+        <button class="level-button" data-level="Level1">Level 1</button>
+        <button class="level-button" data-level="Level2">Level 2</button>
+        <button class="level-button" data-level="Level3">Level 3</button>
+        <button class="level-button" data-level="Level4">Level 4</button>
+        <button class="level-button" data-level="Level5">Level 5</button>
+    </div>
 
+    <script src="level-selector.js"></script>
 </body>
 </html>
