--- a/index.html
+++ b/index.html
@@ -1,83 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="js/main.js" defer></script>
+    <meta content="width=device-width, initial-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
+    <title>PVZ</title>
 </head>
 <body>
-<header>
-</header>
-<main>
-    <section class="game-towers">
-        <h2>Torens</h2>
-        <div class="items">
-            <div class="item" id="item-1">
-                <span>Item-1</span>
-            </div>
-            <div class="item" id="item-2">
-                <span>Item-2</span>
-            </div>
-        </div>
+    <div id="bgimage"></div>
+    <div id="grassyhill"></div>
+    <div id="pot"></div>
+    <div id="pan"></div>
+    <div id="bottle"></div>
+    <section class="getstarted">
+        <img id="berghofflogo" src="./Assets/berghoff%20logo.png" alt="">
+        <p>vs</p>
+        <img id="vervuiling" src="./Assets/VERVUILING.png" alt="">
+        <button>START</button>
     </section>
-    <section class="game-container">
-        <div class="field" id="field-1">
-            <div class="grid-cell" data-row="1" data-col="1"></div>
-            <div class="grid-cell" data-row="1" data-col="2"></div>
-            <div class="grid-cell" data-row="1" data-col="3"></div>
-            <div class="grid-cell" data-row="1" data-col="4"></div>
-            <div class="grid-cell" data-row="1" data-col="5"></div>
-            <div class="grid-cell" data-row="1" data-col="6"></div>
-            <div class="grid-cell" data-row="1" data-col="7"></div>
-            <div class="grid-cell" data-row="1" data-col="8"></div>
-            <div class="grid-cell" data-row="1" data-col="9"></div>
-            <div class="grid-cell" data-row="1" data-col="10"></div>
-        </div>
-        <div class="field" id="field-2">
-            <div class="grid-cell" data-row="2" data-col="1"></div>
-            <div class="grid-cell" data-row="2" data-col="2"></div>
-            <div class="grid-cell" data-row="2" data-col="3"></div>
-            <div class="grid-cell" data-row="2" data-col="4"></div>
-            <div class="grid-cell" data-row="2" data-col="5"></div>
-            <div class="grid-cell" data-row="2" data-col="6"></div>
-            <div class="grid-cell" data-row="2" data-col="7"></div>
-            <div class="grid-cell" data-row="2" data-col="8"></div>
-            <div class="grid-cell" data-row="2" data-col="9"></div>
-            <div class="grid-cell" data-row="2" data-col="10"></div>
-        </div>
-        <div class="field" id="field-3">
-            <div class="grid-cell" data-row="3" data-col="1"></div>
-            <div class="grid-cell" data-row="3" data-col="2"></div>
-            <div class="grid-cell" data-row="3" data-col="3"></div>
-            <div class="grid-cell" data-row="3" data-col="4"></div>
-            <div class="grid-cell" data-row="3" data-col="5"></div>
-            <div class="grid-cell" data-row="3" data-col="6"></div>
-            <div class="grid-cell" data-row="3" data-col="7"></div>
-            <div class="grid-cell" data-row="3" data-col="8"></div>
-            <div class="grid-cell" data-row="3" data-col="9"></div>
-            <div class="grid-cell" data-row="3" data-col="10"></div>
-        </div>
-        <div class="field" id="field-4">
-            <div class="grid-cell" data-row="4" data-col="1"></div>
-            <div class="grid-cell" data-row="4" data-col="2"></div>
-            <div class="grid-cell" data-row="4" data-col="3"></div>
-            <div class="grid-cell" data-row="4" data-col="4"></div>
-            <div class="grid-cell" data-row="4" data-col="5"></div>
-            <div class="grid-cell" data-row="4" data-col="6"></div>
-            <div class="grid-cell" data-row="4" data-col="7"></div>
-            <div class="grid-cell" data-row="4" data-col="8"></div>
-            <div class="grid-cell" data-row="4" data-col="9"></div>
-            <div class="grid-cell" data-row="4" data-col="10"></div>
-        </div>
-    </section>
-    <button id="btn">Button</button>
-</main>
-<footer>
 
-</footer>
 </body>
 </html>
