aanmaak game Branch + logica

--- a/game/index.html
+++ b/game/index.html
@@ -1,10 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="js/main.js" type="module" defer></script>
+    <script src="js/tower.js" type="module" defer></script>
 </head>
 <body>
+<header>
+</header>
+<main>
+    <section class="game-towers">
+        <h2>Torens</h2>
+        <div class="items"></div>
+        <div>
+            <h3>Money</h3>
+            <p id="money">100</p>
+        </div>
+    </section>
+    <section class="game-container">
+        <div class="field" id="field-1">
+            <div class="grid-cell" data-row="1" data-col="1"></div>
+            <div class="grid-cell" data-row="1" data-col="2"></div>
+            <div class="grid-cell" data-row="1" data-col="3"></div>
+            <div class="grid-cell" data-row="1" data-col="4"></div>
+            <div class="grid-cell" data-row="1" data-col="5"></div>
+            <div class="grid-cell" data-row="1" data-col="6"></div>
+            <div class="grid-cell" data-row="1" data-col="7"></div>
+            <div class="grid-cell" data-row="1" data-col="8"></div>
+            <div class="grid-cell" data-row="1" data-col="9"></div>
+            <div class="grid-cell" data-row="1" data-col="10"></div>
+        </div>
+        <div class="field" id="field-2">
+            <div class="grid-cell" data-row="2" data-col="1"></div>
+            <div class="grid-cell" data-row="2" data-col="2"></div>
+            <div class="grid-cell" data-row="2" data-col="3"></div>
+            <div class="grid-cell" data-row="2" data-col="4"></div>
+            <div class="grid-cell" data-row="2" data-col="5"></div>
+            <div class="grid-cell" data-row="2" data-col="6"></div>
+            <div class="grid-cell" data-row="2" data-col="7"></div>
+            <div class="grid-cell" data-row="2" data-col="8"></div>
+            <div class="grid-cell" data-row="2" data-col="9"></div>
+            <div class="grid-cell" data-row="2" data-col="10"></div>
+        </div>
+        <div class="field" id="field-3">
+            <div class="grid-cell" data-row="3" data-col="1"></div>
+            <div class="grid-cell" data-row="3" data-col="2"></div>
+            <div class="grid-cell" data-row="3" data-col="3"></div>
+            <div class="grid-cell" data-row="3" data-col="4"></div>
+            <div class="grid-cell" data-row="3" data-col="5"></div>
+            <div class="grid-cell" data-row="3" data-col="6"></div>
+            <div class="grid-cell" data-row="3" data-col="7"></div>
+            <div class="grid-cell" data-row="3" data-col="8"></div>
+            <div class="grid-cell" data-row="3" data-col="9"></div>
+            <div class="grid-cell" data-row="3" data-col="10"></div>
+        </div>
+        <div class="field" id="field-4">
+            <div class="grid-cell" data-row="4" data-col="1"></div>
+            <div class="grid-cell" data-row="4" data-col="2"></div>
+            <div class="grid-cell" data-row="4" data-col="3"></div>
+            <div class="grid-cell" data-row="4" data-col="4"></div>
+            <div class="grid-cell" data-row="4" data-col="5"></div>
+            <div class="grid-cell" data-row="4" data-col="6"></div>
+            <div class="grid-cell" data-row="4" data-col="7"></div>
+            <div class="grid-cell" data-row="4" data-col="8"></div>
+            <div class="grid-cell" data-row="4" data-col="9"></div>
+            <div class="grid-cell" data-row="4" data-col="10"></div>
+        </div>
+    </section>
+    <button id="btn">Button</button>
+</main>
+<footer>
 
+</footer>
 </body>
 </html>
