--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js" type="module" defer></script>
+    <script src="js/tower.js" type="module" defer></script>
 </head>
 <body>
 <header>
@@ -16,12 +17,6 @@
     <section class="game-towers">
         <h2>Torens</h2>
         <div class="items">
-            <div class="item" id="item-1">
-                <span>Item-1</span>
-            </div>
-            <div class="item" id="item-2">
-                <span>Item-2</span>
-            </div>
         </div>
     </section>
     <section class="game-container">
@@ -72,6 +67,18 @@
             <div class="grid-cell" data-row="4" data-col="8"></div>
             <div class="grid-cell" data-row="4" data-col="9"></div>
             <div class="grid-cell" data-row="4" data-col="10"></div>
+        </div>
+        <div class="field" id="field-5">
+            <div class="grid-cell" data-row="5" data-col="1"></div>
+            <div class="grid-cell" data-row="5" data-col="2"></div>
+            <div class="grid-cell" data-row="5" data-col="3"></div>
+            <div class="grid-cell" data-row="5" data-col="4"></div>
+            <div class="grid-cell" data-row="5" data-col="5"></div>
+            <div class="grid-cell" data-row="5" data-col="6"></div>
+            <div class="grid-cell" data-row="5" data-col="7"></div>
+            <div class="grid-cell" data-row="5" data-col="8"></div>
+            <div class="grid-cell" data-row="5" data-col="9"></div>
+            <div class="grid-cell" data-row="5" data-col="10"></div>
         </div>
     </section>
     <button id="btn">Button</button>
