--- a/game/index.html
+++ b/game/index.html
@@ -7,20 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <script src="../js/main.js" defer></script>
+    <script src="../js/main.js" type="module"></script>
 </head>
 <body>
 <header>
 </header>
-<main>
+<main class="container">
     <section class="game-towers">
-        <h2>Torens</h2>
         <div class="items">
             <div class="item" id="item-1">
-                <span>Item-1</span>
+                <img src="../Assets/HEROPOT.png" alt="">
+                <span>Blocker</span>
             </div>
             <div class="item" id="item-2">
-                <span>Item-2</span>
+                <img src="../Assets/HEROFLES.png" alt="">
+                <span>Shooter</span>
             </div>
         </div>
     </section>
@@ -34,8 +35,7 @@
             <div class="grid-cell" data-row="1" data-col="6"></div>
             <div class="grid-cell" data-row="1" data-col="7"></div>
             <div class="grid-cell" data-row="1" data-col="8"></div>
-            <div class="grid-cell" data-row="1" data-col="9"></div>
-            <div class="grid-cell" data-row="1" data-col="10"></div>
+
         </div>
         <div class="field" id="field-2">
             <div class="grid-cell" data-row="2" data-col="1"></div>
@@ -46,8 +46,7 @@
             <div class="grid-cell" data-row="2" data-col="6"></div>
             <div class="grid-cell" data-row="2" data-col="7"></div>
             <div class="grid-cell" data-row="2" data-col="8"></div>
-            <div class="grid-cell" data-row="2" data-col="9"></div>
-            <div class="grid-cell" data-row="2" data-col="10"></div>
+
         </div>
         <div class="field" id="field-3">
             <div class="grid-cell" data-row="3" data-col="1"></div>
@@ -58,8 +57,7 @@
             <div class="grid-cell" data-row="3" data-col="6"></div>
             <div class="grid-cell" data-row="3" data-col="7"></div>
             <div class="grid-cell" data-row="3" data-col="8"></div>
-            <div class="grid-cell" data-row="3" data-col="9"></div>
-            <div class="grid-cell" data-row="3" data-col="10"></div>
+
         </div>
         <div class="field" id="field-4">
             <div class="grid-cell" data-row="4" data-col="1"></div>
@@ -70,8 +68,29 @@
             <div class="grid-cell" data-row="4" data-col="6"></div>
             <div class="grid-cell" data-row="4" data-col="7"></div>
             <div class="grid-cell" data-row="4" data-col="8"></div>
-            <div class="grid-cell" data-row="4" data-col="9"></div>
-            <div class="grid-cell" data-row="4" data-col="10"></div>
+
+        </div>
+        <div class="field" id="field-5">
+            <div class="grid-cell" data-row="5" data-col="1"></div>
+            <div class="grid-cell" data-row="5" data-col="2"></div>
+            <div class="grid-cell" data-row="5" data-col="3"></div>
+            <div class="grid-cell" data-row="5" data-col="4"></div>
+            <div class="grid-cell" data-row="5" data-col="5"></div>
+            <div class="grid-cell" data-row="5" data-col="6"></div>
+            <div class="grid-cell" data-row="5" data-col="7"></div>
+            <div class="grid-cell" data-row="5" data-col="8"></div>
+
+        </div>
+        <div class="field" id="field-6">
+            <div class="grid-cell" data-row="6" data-col="1"></div>
+            <div class="grid-cell" data-row="6" data-col="2"></div>
+            <div class="grid-cell" data-row="6" data-col="3"></div>
+            <div class="grid-cell" data-row="6" data-col="4"></div>
+            <div class="grid-cell" data-row="6" data-col="5"></div>
+            <div class="grid-cell" data-row="6" data-col="6"></div>
+            <div class="grid-cell" data-row="6" data-col="7"></div>
+            <div class="grid-cell" data-row="6" data-col="8"></div>
+
         </div>
     </section>
     <button id="btn">Button</button>
