--- a/game/index.html
+++ b/game/index.html
@@ -10,42 +10,49 @@
     <script src="../js/main.js" type="module"></script>
 </head>
 <body>
+<!--<div id="bgimage"></div>-->
 <header>
 </header>
 <main class="container">
     <section class="game-towers">
         <div class="items">
-            <div class="item" id="item-1">
+            <div class="item" id="item-1" tabindex="0">
                 <img src="../Assets/HEROPOT.png" alt="">
                 <span>Blocker</span>
+                <span class="price">25⭐</span>
             </div>
-            <div class="item" id="item-2">
+            <div class="item" id="item-2" tabindex="0">
                 <img src="../Assets/HEROFLES.png" alt="">
                 <span>Shooter</span>
+                <span class="price">75⭐</span>
             </div>
         </div>
+        <div class="points">
+            <span>100⭐</span>
+        </div>
     </section>
+
     <section class="game-container">
         <div class="field" id="field-1">
-            <div class="grid-cell" data-row="1" data-col="1"></div>
-            <div class="grid-cell" data-row="1" data-col="2"></div>
-            <div class="grid-cell" data-row="1" data-col="3"></div>
-            <div class="grid-cell" data-row="1" data-col="4"></div>
-            <div class="grid-cell" data-row="1" data-col="5"></div>
-            <div class="grid-cell" data-row="1" data-col="6"></div>
-            <div class="grid-cell" data-row="1" data-col="7"></div>
-            <div class="grid-cell" data-row="1" data-col="8"></div>
+            <div class="grid-cell" data-row="1" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="1" data-col="8" tabindex="0"></div>
 
         </div>
         <div class="field" id="field-2">
-            <div class="grid-cell" data-row="2" data-col="1"></div>
-            <div class="grid-cell" data-row="2" data-col="2"></div>
-            <div class="grid-cell" data-row="2" data-col="3"></div>
-            <div class="grid-cell" data-row="2" data-col="4"></div>
-            <div class="grid-cell" data-row="2" data-col="5"></div>
-            <div class="grid-cell" data-row="2" data-col="6"></div>
-            <div class="grid-cell" data-row="2" data-col="7"></div>
-            <div class="grid-cell" data-row="2" data-col="8"></div>
+            <div class="grid-cell" data-row="2" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="2" data-col="8" tabindex="0"></div>
 
         </div>
         <div class="field" id="field-3">
