commit met alterations v. cyka1

--- a/game/index.html
+++ b/game/index.html
@@ -10,29 +10,34 @@
     <script src="../js/main.js" type="module"></script>
 </head>
 <body>
-<!--<div id="bgimage"></div>-->
+<div id="bgimage"></div>
 <header>
+    <section class="game-towers container">
+    <div class="items">
+        <div class="item" id="item-1" tabindex="0">
+            <img src="../Assets/HEROPOT.png" alt="Blocker">
+            <span>Blocker</span>
+            <span class="price">25⭐</span>
+        </div>
+        <div class="item" id="item-2" tabindex="0">
+            <img src="../Assets/HEROFLES.png" alt="Shooter">
+            <span>Shooter</span>
+            <span class="price">75⭐</span>
+        </div>
+    </div>
+    <div class="points">
+        <span>100⭐</span>
+    </div>
+</section>
 </header>
-<main class="container">
-    <section class="game-towers">
-        <div class="items">
-            <div class="item" id="item-1" tabindex="0">
-                <img src="../Assets/HEROPOT.png" alt="">
-                <span>Blocker</span>
-                <span class="price">25⭐</span>
-            </div>
-            <div class="item" id="item-2" tabindex="0">
-                <img src="../Assets/HEROFLES.png" alt="">
-                <span>Shooter</span>
-                <span class="price">75⭐</span>
-            </div>
-        </div>
-        <div class="points">
-            <span>100⭐</span>
-        </div>
+<main>
+
+    <section id="gameOver" class="visually-hidden">
+        <span>GAME OVER!</span>
+        <a href="../level-selector/">Terug naar de Level-selector</a>
     </section>
 
-    <section class="game-container">
+    <section class="game-container container">
         <div class="field" id="field-1">
             <div class="grid-cell" data-row="1" data-col="1" tabindex="0"></div>
             <div class="grid-cell" data-row="1" data-col="2" tabindex="0"></div>
@@ -56,51 +61,51 @@
 
         </div>
         <div class="field" id="field-3">
-            <div class="grid-cell" data-row="3" data-col="1"></div>
-            <div class="grid-cell" data-row="3" data-col="2"></div>
-            <div class="grid-cell" data-row="3" data-col="3"></div>
-            <div class="grid-cell" data-row="3" data-col="4"></div>
-            <div class="grid-cell" data-row="3" data-col="5"></div>
-            <div class="grid-cell" data-row="3" data-col="6"></div>
-            <div class="grid-cell" data-row="3" data-col="7"></div>
-            <div class="grid-cell" data-row="3" data-col="8"></div>
+            <div class="grid-cell" data-row="3" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="3" data-col="8" tabindex="0"></div>
 
         </div>
         <div class="field" id="field-4">
-            <div class="grid-cell" data-row="4" data-col="1"></div>
-            <div class="grid-cell" data-row="4" data-col="2"></div>
-            <div class="grid-cell" data-row="4" data-col="3"></div>
-            <div class="grid-cell" data-row="4" data-col="4"></div>
-            <div class="grid-cell" data-row="4" data-col="5"></div>
-            <div class="grid-cell" data-row="4" data-col="6"></div>
-            <div class="grid-cell" data-row="4" data-col="7"></div>
-            <div class="grid-cell" data-row="4" data-col="8"></div>
+            <div class="grid-cell" data-row="4" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="4" data-col="8" tabindex="0"></div>
 
         </div>
         <div class="field" id="field-5">
-            <div class="grid-cell" data-row="5" data-col="1"></div>
-            <div class="grid-cell" data-row="5" data-col="2"></div>
-            <div class="grid-cell" data-row="5" data-col="3"></div>
-            <div class="grid-cell" data-row="5" data-col="4"></div>
-            <div class="grid-cell" data-row="5" data-col="5"></div>
-            <div class="grid-cell" data-row="5" data-col="6"></div>
-            <div class="grid-cell" data-row="5" data-col="7"></div>
-            <div class="grid-cell" data-row="5" data-col="8"></div>
+            <div class="grid-cell" data-row="5" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="5" data-col="8" tabindex="0"></div>
 
         </div>
         <div class="field" id="field-6">
-            <div class="grid-cell" data-row="6" data-col="1"></div>
-            <div class="grid-cell" data-row="6" data-col="2"></div>
-            <div class="grid-cell" data-row="6" data-col="3"></div>
-            <div class="grid-cell" data-row="6" data-col="4"></div>
-            <div class="grid-cell" data-row="6" data-col="5"></div>
-            <div class="grid-cell" data-row="6" data-col="6"></div>
-            <div class="grid-cell" data-row="6" data-col="7"></div>
-            <div class="grid-cell" data-row="6" data-col="8"></div>
+            <div class="grid-cell" data-row="6" data-col="1" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="2" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="3" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="4" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="5" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="6" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="7" tabindex="0"></div>
+            <div class="grid-cell" data-row="6" data-col="8" tabindex="0"></div>
 
         </div>
     </section>
-    <button id="btn">Button</button>
+    
 </main>
 <footer>
 
