--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img id="berghofflogo" src="./Assets/berghoff%20logo.png" alt="">
         <p>vs</p>
         <img id="vervuiling" src="./Assets/VERVUILING.png" alt="">
-        <button>START</button>
+        <a href="../Berghoff/level-selector/">START</a>
     </section>
 
 </body>
