--- a/level-selector/index.html
+++ b/level-selector/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Select Difficulty Level</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="../js/levelselector.js" type="module"></script>
     <script src="../js/submitscript.js" type="module"></script>
 </head>
